# ImprovisedTDS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ImprovisedTDS.sln  README.md
ImprovisedTDS/: AssetBank.hpp  Camera2D.hpp  ContentManager.hpp  Engine.hpp  EntityManager.hpp  ImprovisedTDS.cpp  ImprovisedTDS.vcxproj  ImprovisedTDS.vcxproj.filters  InputManager.hpp  Player.cpp  Player.hpp  PngReader.hpp  Program.cpp  Rectangle.hpp  Shader.hpp  SpriteBatch.hpp  Texture2D.hpp  Vector2.hpp
ImprovisedTDS/Content/: Sprite.vert
ImprovisedTDS/data/shaders/: Sprite.frag
ImprovisedTDS/include/: AssetBank.hpp  Camera2D.hpp  Engine.hpp  Entity.hpp  ImprovisedTDS.hpp  PngReader.hpp  Shader.hpp  SpriteBatch.hpp  Texture2D.hpp  Vector2.hpp
ImprovisedTDS/src/: ImprovisedTDS.cpp  Player.cpp
